--- a/Conceitos Node Aulas/1 - Node/package.json
+++ b/Conceitos Node Aulas/1 - Node/package.json
@@ -2,6 +2,7 @@
   "name": "conceitos-node",
   "version": "1.0.0",
   "description": "Esta exercicio  serve para aprender os conceitos da melhor forma referente ao NODE",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
