--- a/Conceitos Node Aulas/1 - Node/package.json
+++ b/Conceitos Node Aulas/1 - Node/package.json
@@ -10,6 +10,10 @@
   "author": "Alisson Claro",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.17.0",
     "express": "^4.19.2"
+  },
+  "devDependencies": {
+    "prisma": "^5.17.0"
   }
 }
